--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@
 body{
   padding-inline: 10vw;
   margin:0;
-  background-color: rgb(177, 177, 177);
+  background-color: #666;
   background-blend-mode: multiply;
   padding-block:2vw;
   background-image: url(./assets/background.jpg);
@@ -34,6 +34,9 @@ body{
   .app{
     backdrop-filter: blur(1rem);
     background-color: rgba(221, 221, 221, 0.336);
+  }
+  body {
+    background-color: rgb(177, 177, 177);
   }
 }
 
