--- a/client/src/index.css
+++ b/client/src/index.css
@@ -123,6 +123,8 @@ h1,h2,h3,h4,h5{
 
 .form-group.inline{
   flex-direction: row !important;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .form-container > form > .form-group > input{
@@ -542,6 +544,7 @@ dialog::backdrop{
   padding: 5px;
   position: absolute;
   right:-2px;
+  top: 0px;
   outline: none;
   cursor: pointer;
   border-radius: 50%;
