--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Germania+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 *{
   box-sizing: border-box;
   /* font-family: Poppins; */
@@ -40,17 +43,18 @@ button {
   position: relative;
   border: 1px solid rgba(255,255,255,0.2);
   -webkit-backdrop-filter: blur(30px) saturate(125%);
+  backdrop-filter: blur(30px) saturate(125%);
   border-radius: 10px;
 }
 
-@supports (backdrop-filter: blur(30px)){
+/* @supports (backdrop-filter: blur(30px)){
   .app{
     backdrop-filter: blur(30px) saturate(125%);
   }
-  /* body {
+   body {
     background-color: rgb(177, 177, 177);
-  } */
-}
+  }
+} */
 
 h1,h2,h3,h4,h5{
   margin:0;
@@ -81,9 +85,10 @@ h1,h2,h3,h4,h5{
   border: none;
   outline: none;
   cursor: pointer;
-  font-family: serif;
+  font-family: "Fira Sans", serif;
   font-size: 16px;
   color: black;
+  font-size: 14px;
 }
 
 .header > nav > ul > li > a:hover, .header > nav > ul > li > button:hover{
@@ -91,10 +96,10 @@ h1,h2,h3,h4,h5{
 }
 
 .header > .logo > a {
-  font-family: 'IBM Plex Serif', serif;
+  font-family: 'Bungee', 'IBM Plex Serif', serif;
   color: var(--primary);
   text-decoration: none;
-  text-shadow:0 0 5px white; 
+  text-shadow:0 0 5px grey; 
 }
 
 .form-container{
@@ -105,7 +110,7 @@ h1,h2,h3,h4,h5{
   min-height:70vh;
   gap: 2rem;
   border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.466);
+  background-color: rgba(255, 255, 255, 0.5);
   box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.3);
   padding-block:20px;
   position: relative;
@@ -201,15 +206,16 @@ h1,h2,h3,h4,h5{
   display: grid;
   place-items: center;
   z-index: 999;
+  border-radius: 10px;
 }
 
 .spinner{
-  height: 50px;
-  width: 50px;
-  border: 2px solid gray;
+  height: 30px;
+  width: 30px;
+  border: 3px solid gray;
   border-radius: 50%;
   border-top-color: var(--primary);
-  animation: spinner 0.7s linear infinite;
+  animation: spinner 0.8s infinite;
 }
 
 .groups-container {
@@ -262,6 +268,10 @@ h1,h2,h3,h4,h5{
   transform: translate(2px, -2px);
 }
 
+.group:active {
+  transform: translate(0, 0);
+}
+
 .group:hover::before {
   transform: translate(-2px, 2px);
   opacity: 1;
@@ -278,10 +288,12 @@ h1,h2,h3,h4,h5{
 }
 
 .addGroup > button {
+  color: black;
   border-radius:50%;
   font-size: 1.1rem;
   cursor: pointer;
   border: none;
+  width: max-content;
   background-color:rgb(201, 81, 81);
   outline: none;
   aspect-ratio: 1;
@@ -304,6 +316,7 @@ h1,h2,h3,h4,h5{
   .app {
     min-height: 100vh;
     border-radius:0;
+    border:none;
   }
 }
 
@@ -633,6 +646,10 @@ span.members > span {
   .form-container::after {
     background-position: center;
   }
+
+  .form-container {
+    height: 85vh;
+  }
 }
 
 @media (max-width: 1200px) {
@@ -663,4 +680,10 @@ span.members > span {
   .group_details > .info {
     display: block;
   }
+}
+
+select {
+  padding: 5px;
+  outline: none;
+  cursor: pointer;
 }
