--- a/client/src/index.css
+++ b/client/src/index.css
@@ -218,6 +218,12 @@ h1,h2,h3,h4,h5{
   animation: spinner 0.8s infinite;
 }
 
+@media (max-width: 500px) {
+  .spinner-container {
+    border-radius: 0;
+  }
+}
+
 .groups-container {
   /* background-color: red; */
   padding: 20px;
@@ -284,22 +290,19 @@ h1,h2,h3,h4,h5{
 .addGroup {
   position: absolute;
   right: 0;
-  transform: translate(-10px, 10px)
+  transform: translate(-10px, 10px);
+  border-radius: 50%;
 }
 
-.addGroup > button {
-  color: black;
-  border-radius:50%;
-  font-size: 1.1rem;
+.addGroup > i {
+  color: #c95151;
   cursor: pointer;
-  border: none;
-  width: max-content;
-  background-color:rgb(201, 81, 81);
-  outline: none;
-  aspect-ratio: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  font-size: 1.3rem;
+}
+
+.addGroup > i::before {
+  background-color: var(--secondary);
+  border-radius: 50%;
 }
 
 @keyframes spinner{
@@ -318,6 +321,7 @@ h1,h2,h3,h4,h5{
     border-radius:0;
     border:none;
   }
+
 }
 
 .create_group{
@@ -386,6 +390,7 @@ dialog{
   border: 1px solid rgba(255, 255, 255, 0.4);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(30px);
   width: 300px;
   border-radius: 5px;
 }
